name:                bokeHS

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            For building Bokeh reactive graphs
description:         Package for building reactive graphs for the Bokeh visualization library.

-- A longer description of the package.
-- description:

license:             BSD3
license-file:        LICENSE

author:              Mark Hay

maintainer:          mah6@williams.edu

-- A copyright notice.
-- copyright:

category:            Graphics
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  ChangeLog.md
                     README.md
data-files:          templates/bokeh.tpl
cabal-version:       >=1.10.0

library
  exposed-modules: Graphics.BokeHS.Serialize
                   Graphics.BokeHS.Models
                   Graphics.BokeHS.List
  GHC-Options:         -Wall
  other-modules: Paths_bokeHS

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  build-depends:       base >= 4.9 && < 4.12,
                       aeson >= 1.3,
                       aeson-pretty,
                       colour >= 2.3.3,
                       Frames , 
                       ginger ,
                       text >= 1.2,
                       scientific,
                       mtl,
                       unordered-containers >= 0.2.9.0,
                       bytestring,
                       hashable

  -- Directories containing source files.
  hs-source-dirs: src

  -- Base language which the package is written in.
  default-language:    Haskell98

